Procurement: 24-mo license, syllabus reach, trust copy, footer ABN placeholder
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                     <span class="tag">Modernism & Post-Modernism</span>
                                 </div>
                             </div>
-                            <p class="film-footnote"><span>55:36</span><span>4K Digital</span><span>Perpetual Institutional License</span><span>NAS Library (Archival Placement)</span></p>
+                            <p class="film-footnote"><span>55:36</span><span>4K Digital</span><span>24-Month Institutional License</span><span>NAS Library (Archival Placement)</span></p>
                         </div>
                     </div>
                 </div>
@@ -225,7 +225,7 @@
                                     <span class="tag">Signs & Symbols</span>
                                 </div>
                             </div>
-                            <p class="film-footnote"><span>1 h 2 min</span><span>4K Digital</span><span>Perpetual Institutional License</span><span>NAS Library (Archival Placement)</span></p>
+                            <p class="film-footnote"><span>1 h 2 min</span><span>4K Digital</span><span>24-Month Institutional License</span><span>NAS Library (Archival Placement)</span></p>
                         </div>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                                     <span class="tag">Art & Spirituality</span>
                                 </div>
                             </div>
-                            <p class="film-footnote"><span>50 min</span><span>4K Digital</span><span>Perpetual Institutional License</span><span>NAS Library (Archival Placement)</span></p>
+                            <p class="film-footnote"><span>50 min</span><span>4K Digital</span><span>24-Month Institutional License</span><span>NAS Library (Archival Placement)</span></p>
                         </div>
                     </div>
                 </div>
@@ -386,13 +386,14 @@
                 <li>Full Unlimited Access to the Cullen, Blackman, & Coburn Trilogy</li>
                 <li>Complete Years 9–12 Teacher Resource Packs (Printable PDF)</li>
                 <li>24-Month School-Wide Site License (Staff & Students)</li>
-                <li>Direct Syllabus Mapping to VCAA, NESA, and ACARA</li>
+                <li>Direct Syllabus Mapping to NESA, VCAA, QCAA, SACE, WACE & ACARA</li>
             </ul>
             
             <div class="pricing-buttons">
                 <button class="btn-pricing-primary" id="activate-enrollment-btn">Activate School Enrollment</button>
                 <a href="mailto:admin@greenturtleproductions.com.au?subject=Institutional Access Inquiry: [School Name]&body=Hello Green Turtle Productions,%0D%0A%0D%0AWe would like to request a formal quote/invoice for the Series 01 Anthology for [School Name].%0D%0A%0D%0APlease send details to [Contact Email].%0D%0A%0D%0AThank you." class="btn-pricing-secondary btn-pricing-quote">Request Tax Invoice / Quote</a>
             </div>
+            <p style="font-family: 'Inter', sans-serif; font-size: 11px; color: var(--text-secondary); text-align: center; margin-top: 16px; letter-spacing: 0.05em; text-transform: uppercase;">Approved Australian Educational Vendor</p>
         </div>
         </div>
     </section>
@@ -401,9 +402,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p class="footer-text">
-                    © 2024 <a href="https://greenturtleproductions.com.au" target="_blank" class="footer-link">Green Turtle Productions</a> | The Australian Art Anthology is an Institutional Resource.
-                </p>
+                <p class="footer-text">© 2024 <a href="https://greenturtleproductions.com.au" target="_blank" class="footer-link" style="display:inline;">Green Turtle Productions</a> | ABN: [INSERT ABN HERE] <br><span style="margin-top: 8px; display: inline-block; font-size: 10px; opacity: 0.6;">The Australian Art Anthology is an Institutional Resource.</span></p>
             </div>
         </div>
     </footer>
